@@ -20,6 +20,7 @@ import org.elasticsearch.xpack.esql.datasources.spi.Configured;
 import org.elasticsearch.xpack.esql.datasources.spi.Connector;
 import org.elasticsearch.xpack.esql.datasources.spi.ConnectorFactory;
 import org.elasticsearch.xpack.esql.datasources.spi.DataSourcePlugin;
+import org.elasticsearch.xpack.esql.datasources.spi.DataSourceUsageAccumulator;
 import org.elasticsearch.xpack.esql.datasources.spi.DecompressionCodec;
 import org.elasticsearch.xpack.esql.datasources.spi.ExternalSourceFactory;
 import org.elasticsearch.xpack.esql.datasources.spi.ExternalSourceMetrics;
@@ -37,6 +38,7 @@ import org.elasticsearch.xpack.esql.datasources.spi.TableCatalogFactory;
 import java.io.Closeable;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -135,8 +137,9 @@ public final class DataSourceModule implements Closeable {
         LocalFileAccess localFileAccess
     ) {
         this.capabilities = capabilities;
-        // Node telemetry sink for external-source read metrics; NOOP when no registry is supplied (tests).
-        this.externalSourceMetrics = meterRegistry == null ? ExternalSourceMetrics.NOOP : new ExternalSourceMetrics(meterRegistry);
+        // Always create a live accumulator so phone-home counters work even when APM is disabled.
+        DataSourceUsageAccumulator accumulator = new DataSourceUsageAccumulator();
+        this.externalSourceMetrics = new ExternalSourceMetrics(meterRegistry != null ? meterRegistry : MeterRegistry.NOOP, accumulator);
         LocalFileAccess effectiveLocalFileAccess = localFileAccess != null ? localFileAccess : LocalFileAccess.UNRESTRICTED;
         // Off-timer scheduler for the async read-retry backoff, so a retry does not park a GENERIC-pool thread on
         // Thread.sleep while it waits; DIRECT (run promptly on the executor) when no ThreadPool is supplied (tests).
@@ -298,7 +301,13 @@ public final class DataSourceModule implements Closeable {
             sourceFactoryMap.putIfAbsent(formatName, fileFallback);
         }
 
-        this.sourceFactories = Map.copyOf(sourceFactoryMap);
+        // Insertion order is load-bearing, so this cannot be Map.copyOf: that returns a map whose iteration order the
+        // JDK documents as unspecified, silently discarding the "file factory last" ordering established above.
+        // ExternalSourceResolver picks the FIRST factory whose canHandle claims a path, and the claims genuinely
+        // overlap: the Iceberg catalog wrapper claims an extensionless s3 object (a table directory), and the file
+        // factory's config-aware canHandle claims that same object whenever an explicit `format` is configured. With
+        // an undefined order, which one resolves such a path would vary between nodes and restarts.
+        this.sourceFactories = Collections.unmodifiableMap(new LinkedHashMap<>(sourceFactoryMap));
         this.pluginFactories = Map.copyOf(operatorFactoryProviders);
         this.managedCloseables = closeables;
     }
@@ -327,7 +336,7 @@ public final class DataSourceModule implements Closeable {
         return sourceFactories;
     }
 
-    /** The node-level external-source telemetry holder, or {@link ExternalSourceMetrics#NOOP} when no registry was supplied. */
+    /** The node-level external-source telemetry holder. Always a live instance backed by a real {@link DataSourceUsageAccumulator}. */
     public ExternalSourceMetrics externalSourceMetrics() {
         return externalSourceMetrics;
     }
